--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.298",
+    "tech-stack-icons": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
